# scp_stage4_main

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  poc_scp_probe.yaml
configs/data/: earnings_call_mono.yaml  sec_10k_mono.yaml  testcsv.yaml
configs/experiment/: poc.yaml
configs/generation/: greedy.yaml
configs/model/: gemma4_it.yaml  qwen35_4b_it.yaml  qwen3_4b_it.yaml
configs/probe/: aggressive.yaml  sweep.yaml
configs/prompts/: translation_dynamic_5.yaml
configs/qe/: comet_kiwi.yaml
configs/scp/: debug.yaml  debug_orch.yaml  debug_train.yaml  scp_real.yaml  scp_v1.yaml
data/: dev_smoke.jsonl  seed_smoke.jsonl
notebooks/: bench_eval.ipynb  scp_poc_self_collapse.ipynb
scp_runs/debug_001/: events.jsonl  teacher_cache.sqlite
scp_runs/debug_full/: config_hash.txt  events.jsonl  resolved_config.yaml  state.json  teacher_cache.sqlite
scp_runs/debug_orch/: config_hash.txt  events.jsonl  resolved_config.yaml  state.json  teacher_cache.sqlite
scp_runs/debug_train/: config_hash.txt  events.jsonl  resolved_config.yaml  state.json  teacher_cache.sqlite
scripts/: _stub_runners.py  run_scp.py  smoke_full_pipeline.py  smoke_scp_ledger.py
src/: common.py  data.py  generate.py  model_io.py  probe.py  prompt_utils.py  qe.py  scp_a.py
src/scp/: __init__.py  budget.py  cache.py  collapse.py  config.py  datasets.py  evaluator.py  ledger.py  orchestrator.py  prompts.py  qe_setup.py  registry.py  runners.py  runners_real.py  schemas.py  scoring.py  selector.py  state.py  steps.py  storage.py  summary.py  teacher.py  tracking.py
(+27 files in other folders)
