[project]
name = "scp-stage4-main"
version = "0.1.0"
description = "Stage 4: Self-Collapse Probing (SCP) PoC and full training framework"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.5.0",
    "transformers==5.5.4",
    "peft>=0.15.0",
    "datasets>=3.0.0",
    "accelerate>=1.3.0",
    "trl>=0.15.0",
    "unsloth",
    "wandb",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "sentencepiece",
    "tiktoken",
    "safetensors",
    "pyyaml",
    "tqdm",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.7.0", "triton>=3.0.0"]
eval = ["unbabel-comet>=2.2.0", "sacrebleu>=2.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
